# face-recognition-anti-spoof

./: .env.example  .gitignore  Makefile  README.md  backup.py  docker-compose.yml  package.json
apps/api/: Dockerfile  alembic.ini  face_attendance.db  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_self_enrollment_support.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: __init__.py  attendance.py  auth.py  enrollments.py  health.py  me_enrollment.py  persons.py  recognition.py  recognition_attempts.py  review_cases.py  sessions.py  settings.py  users.py
apps/api/app/core/: config.py  logging.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: domain.py
apps/api/app/providers/: base.py  demo.py
apps/api/app/schemas/: auth.py  common.py  person.py  recognition.py  review.py  self_enrollment.py  session.py  settings.py  user.py
apps/api/app/services/: admin_cleanup.py  audit.py  auth.py  enrollment.py  recognition.py  settings.py
apps/api/app/tests/: test_consensus.py  test_enrollment.py  test_security.py  test_sessions_api.py  test_settings_api.py
apps/api/face_attendance_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/web/: Dockerfile  next.config.mjs  package.json  (+1 more)
docs/: api.md  architecture.md  calibration.md  deployment.md  model-selection.md  privacy-and-security.md  roadmap.md  setup.md
legacy/: FaceNet_fineTuned_model.h5  app.py
models/: README.md  calibration-defaults.json
scripts/: dev-bootstrap.sh
templates/: index.html
(+19 files in other folders)
